@@ -6,6 +6,7 @@
 #include <Decouper.h>
 #include <Decouper_multi.h>
 #include <Partitionneur_Fichier_Decoupage.h>
+#include <Partitionneur_Fichier_MED.h>
 #include <Partitionneur_Metis.h>
 #include <Partitionneur_Parmetis.h>
 #include <Partitionneur_Partition.h>
@@ -19,12 +20,13 @@ Cerr << "src_Kernel_Geometrie_Decoupeur" << finl;
 Decouper inst1;verifie_pere(inst1);
 Decouper_multi inst2;verifie_pere(inst2);
 Partitionneur_Fichier_Decoupage inst3;verifie_pere(inst3);
-Partitionneur_Metis inst4;verifie_pere(inst4);
-Partitionneur_Parmetis inst5;verifie_pere(inst5);
-Partitionneur_Partition inst6;verifie_pere(inst6);
-Partitionneur_Ptscotch inst7;verifie_pere(inst7);
-Partitionneur_Sous_Domaine inst8;verifie_pere(inst8);
-Partitionneur_Sous_Zones inst9;verifie_pere(inst9);
-Partitionneur_Tranche inst10;verifie_pere(inst10);
-Partitionneur_Union inst11;verifie_pere(inst11);
+Partitionneur_Fichier_MED inst4;verifie_pere(inst4);
+Partitionneur_Metis inst5;verifie_pere(inst5);
+Partitionneur_Parmetis inst6;verifie_pere(inst6);
+Partitionneur_Partition inst7;verifie_pere(inst7);
+Partitionneur_Ptscotch inst8;verifie_pere(inst8);
+Partitionneur_Sous_Domaine inst9;verifie_pere(inst9);
+Partitionneur_Sous_Zones inst10;verifie_pere(inst10);
+Partitionneur_Tranche inst11;verifie_pere(inst11);
+Partitionneur_Union inst12;verifie_pere(inst12);
 }
